2008-11-26  Raul Mateos  <raulofpandora@gmail.com>

	* installer/pandora.mpi: Updated installer build to RC3.

2009-11-24  Ramon Novoa  <rnovoa@artica.es>

	* installer/pandora_silent.mpi: Removed from repository. Merged changes
	  into pandora.mpi.

	* installer/pandora.mpi: Merged with pandora_silent.mpi.

	* pandora.cc: Updated version string.

2009-11-19  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc: Fixed bug #2895307.

	* modules/pandora_module.cc: Fixed bug #2835450.

	* bin/pandora_agent.conf: Added xml_buffer configuration token.

	* ssh/libssh2/libssh2_config.h, ssh/libssh2/packet.c: Renamed usleep to
	  u_sleep to avoid conflicts.

	* pandora_windows_service.cc: Fixed bug #2899257.

2009-11-17  Sancho Lerena <slerena@artica.es>

	* Installer/Pandora_silent.mpi: Installer in silent mode. Should
	replace pandora.mpi in the future, includes both, using a command
	line to choose standard or un-attended install.

2009-10-17  Sancho Lerena <slerena@artica.es>

	* configure.in: Modified path to libregex.a instead original boost
	library name (very large and complex). This should be fix with the 
	library package uploaded in sourceforge and compile nicely (works
	for me :-)

2009-10-15  Ramon Novoa  <rnovoa@artica.es>

	* windows_service.cc: Enable service recovery by default.

	* pandora_windows_service.cc: Added autotime, group and description
	  configuration options.

2009-10-13  Sancho Lerena <slerena@artica.es>

	* bin/PandoraAgent.exe: Last build of agent binary.
	
	* bin/pandora_agent.conf: new default .conf for packaging.
	
	* bin/util/getreg.exe, bin/util/cmp.exe, bin/util/sort.exe: New bin tools
	for the 3.0 agent util directory.
	
	* installer/scripts/install_service_restart.bat: Install daily agent
	restart with AT command.
	
	* installer/scripts/restart_pandora_agent.bat: Make a service restart from
	command line (using net commands).
	
	* installer/pandora.mpi: Many fixes and improvements for the installer.
