@@ -30,7 +30,7 @@ using namespace Pandora;
 using namespace Pandora_Strutils;
 
 #define PATH_SIZE    _MAX_PATH+1
-#define PANDORA_VERSION ("3.0(Build 091124)")
+#define PANDORA_VERSION ("3.0(Build 091125)")
 
 string pandora_path;
 string pandora_dir;
