@@ -1,3 +1,12 @@
+2009-11-26  Ramon Novoa  <rnovoa@artica.es>
+
+	* installer/pandora.mpi: Updated version and silent install mode.
+
+	* pandora_windows_service.cc: Set the path from the agent to avoid
+	  having to reboot. Fixed a typo.
+
+	* pandora.cc: Updated version.
+
 2008-11-26  Raul Mateos  <raulofpandora@gmail.com>
 
 	* installer/pandora.mpi: Updated installer build to RC3.
